--- a/history.txt
+++ b/history.txt
@@ -1,59 +1,59 @@
-#JumlahShowJKT48 2025-08-03
+#JumlahShowJKT48 2025-08-09
 
-740 Feni (+1)
-732 Gracia (+2)
-419 Jessi (+2)
-380 Muthe (+1)
-353 Freya (+2)
-349 Eli (+2)
-348 Olla (+1)
-343 Lulu (+1)
+740 Feni
+732 Gracia
+420 Jessi (+1)
+380 Muthe
+353 Freya
+350 Eli (+1)
+349 Olla (+1)
+343 Lulu
 327 Christy
-322 Oniel (+1)
-314 Gita (+3)
-310 Fiony (+2)
-268 Kathrina (+1)
-266 Marsha (+2)
-220 Indah (+1)
-194 Indira (+2)
-171 Lia (+3)
-161 Ella (+3)
-158 Raisha (+3)
-143 Lyn (+1)
-137 Danella (+2)
-135 Cathy (+1)
+322 Oniel
+315 Gita (+1)
+310 Fiony
+268 Kathrina
+267 Marsha (+1)
+220 Indah
+194 Indira
+172 Lia (+1)
+162 Ella (+1)
+158 Raisha
+144 Lyn (+1)
+137 Danella
+135 Cathy
 131 Michie
-129 Gracie (+2)
-126 Chelsea (+1)
-124 Daisy (+2)
-124 Greesel (+3)
-116 Cynthia (+1)
-115 Gendis (+2)
-108 Anindya (+2)
-107 Alya (+2)
-88 Elin (+1)
-82 Oline (+1)
-80 Amanda
-76 Lily (+1)
-75 Trisha (+1)
-70 Kimmy (+1)
-69 Erine (+2)
-66 Nayla
-66 Fritzy (+1)
-64 Nachia (+1)
-60 Aralie
-60 Nala (+1)
+129 Gracie
+126 Chelsea
+124 Daisy
+124 Greesel
+116 Cynthia
+116 Gendis (+1)
+109 Anindya (+1)
+107 Alya
+89 Elin (+1)
+83 Oline (+1)
+81 Amanda (+1)
+77 Lily (+1)
+76 Trisha (+1)
+72 Kimmy (+2)
+70 Erine (+1)
+67 Nayla (+1)
+66 Fritzy
+65 Nachia (+1)
+61 Aralie (+1)
+61 Nala (+1)
 59 Regie
-54 Delynn (+1)
-54 Levi (+2)
-51 Ribka
-50 Lana (+2)
-25 Intan (+1)
-23 Ekin (+1)
-18 Auwia (+1)
-16 Giaa (+1)
-14 Mikaela (+1)
-13 Virgi
-12 Jemima
-11 Rilly
-11 Maira
+56 Delynn (+2)
+55 Levi (+1)
+52 Ribka (+1)
+50 Lana
+26 Intan (+1)
+23 Ekin
+20 Auwia (+2)
+17 Giaa (+1)
+15 Mikaela (+1)
+15 Virgi (+2)
+13 Jemima (+1)
+12 Rilly (+1)
+12 Maira (+1)
