--- a/history.txt
+++ b/history.txt
@@ -1,59 +1,59 @@
-#JumlahShowJKT48 2025-08-09
+#JumlahShowJKT48 2025-08-16
 
 740 Feni
-732 Gracia
-420 Jessi (+1)
-380 Muthe
+733 Gracia (+1)
+421 Jessi (+1)
+381 Muthe (+1)
 353 Freya
-350 Eli (+1)
-349 Olla (+1)
+352 Eli (+2)
+350 Olla (+1)
 343 Lulu
 327 Christy
 322 Oniel
-315 Gita (+1)
+317 Gita (+2)
 310 Fiony
-268 Kathrina
-267 Marsha (+1)
-220 Indah
+269 Kathrina (+1)
+267 Marsha
+222 Indah (+2)
 194 Indira
-172 Lia (+1)
-162 Ella (+1)
+173 Lia (+1)
+162 Ella
 158 Raisha
-144 Lyn (+1)
-137 Danella
-135 Cathy
-131 Michie
-129 Gracie
-126 Chelsea
-124 Daisy
-124 Greesel
-116 Cynthia
-116 Gendis (+1)
-109 Anindya (+1)
-107 Alya
-89 Elin (+1)
-83 Oline (+1)
-81 Amanda (+1)
-77 Lily (+1)
-76 Trisha (+1)
-72 Kimmy (+2)
-70 Erine (+1)
-67 Nayla (+1)
+145 Lyn (+1)
+138 Danella (+1)
+136 Cathy (+1)
+133 Michie (+2)
+130 Gracie (+1)
+127 Chelsea (+1)
+126 Daisy (+2)
+125 Greesel (+1)
+118 Cynthia (+2)
+117 Gendis (+1)
+109 Anindya
+108 Alya (+1)
+89 Elin
+85 Oline (+2)
+82 Amanda (+1)
+78 Lily (+1)
+78 Trisha (+2)
+74 Kimmy (+2)
+71 Erine (+1)
+69 Nayla (+2)
 66 Fritzy
-65 Nachia (+1)
-61 Aralie (+1)
-61 Nala (+1)
+66 Nachia (+1)
+62 Aralie (+1)
+62 Nala (+1)
 59 Regie
-56 Delynn (+2)
-55 Levi (+1)
-52 Ribka (+1)
-50 Lana
-26 Intan (+1)
+56 Delynn
+56 Levi (+1)
+53 Ribka (+1)
+51 Lana (+1)
+27 Intan (+1)
 23 Ekin
-20 Auwia (+2)
-17 Giaa (+1)
-15 Mikaela (+1)
-15 Virgi (+2)
-13 Jemima (+1)
-12 Rilly (+1)
-12 Maira (+1)
+21 Auwia (+1)
+19 Giaa (+2)
+17 Mikaela (+2)
+16 Virgi (+1)
+14 Rilly (+2)
+13 Jemima
+12 Maira
