Update history with new entries and adjustments

--- a/history.txt
+++ b/history.txt
@@ -1,57 +1,57 @@
 #JumlahShowJKT48 2025-11-16
 
-741 Gracia (+1)
+746 Gracia (+2)
 740 Feni
-435 Jessi (+2)
-396 Muthe (+2)
-364 Eli (+1)
-362 Freya
-362 Olla (+1)
-350 Lulu (+1)
-337 Christy (+2)
-333 Gita (+2)
-330 Oniel (+1)
-326 Fiony (+1)
-281 Marsha (+1)
-279 Kathrina (+1)
-231 Indah (+1)
-191 Lia (+2)
-168 Raisha (+1)
-165 Ella (+1)
-159 Lyn (+2)
-158 Danella (+2)
-152 Cathy
-147 Michie (+2)
-146 Gracie (+2)
-140 Daisy (+1)
-139 Greesel (+2)
-137 Chelsea (+1)
-129 Cynthia
-128 Gendis
-119 Anindya
-118 Alya
-98 Elin (+1)
-97 Oline (+1)
-93 Trisha (+1)
-91 Amanda (+1)
-87 Kimmy (+1)
-86 Lily
-83 Erine
-81 Nayla (+1)
-78 Fritzy (+1)
-76 Nachia
-73 Nala (+2)
-71 Aralie (+1)
-65 Levi
-64 Delynn
-61 Ribka (+2)
-58 Lana (+1)
-40 Intan (+1)
-35 Ekin (+1)
-34 Auwia (+1)
-28 Giaa
-28 Virgi (+1)
-24 Mikaela
-21 Rilly
-21 Maira (+1)
-19 Jemima (+1)
+441 Jessi (+3)
+401 Muthe (+2)
+370 Eli (+3)
+367 Olla (+2)
+366 Freya (+3)
+358 Lulu (+2)
+343 Christy (+3)
+340 Gita (+3)
+337 Oniel (+2)
+334 Fiony (+4)
+288 Marsha (+3)
+283 Kathrina
+234 Indah
+198 Lia (+3)
+173 Raisha (+3)
+169 Ella (+2)
+165 Danella (+1)
+164 Lyn (+2)
+159 Cathy (+3)
+156 Gracie (+5)
+152 Michie (+2)
+147 Daisy (+2)
+147 Greesel (+3)
+143 Chelsea (+3)
+135 Cynthia (+2)
+133 Gendis (+2)
+125 Anindya (+2)
+119 Alya (+1)
+104 Oline
+101 Elin
+100 Trisha
+96 Kimmy (+1)
+94 Amanda (+2)
+92 Erine
+91 Lily
+87 Nayla (+1)
+85 Nachia (+1)
+81 Fritzy (+1)
+78 Nala (+1)
+77 Aralie (+1)
+71 Levi (+1)
+70 Delynn (+1)
+67 Ribka (+1)
+62 Lana (+1)
+44 Intan
+39 Ekin
+38 Auwia
+35 Virgi (+1)
+34 Giaa
+27 Mikaela (+1)
+26 Rilly (+1)
+24 Maira (+1)
+23 Jemima
